--- a/bbs.cabal
+++ b/bbs.cabal
@@ -17,20 +17,26 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 executable bbs
-  main-is:             Main.hs
-  -- other-modules:
+  main-is: Main.hs
+  other-modules:
+    Model
+    Util
+    Types
   -- other-extensions:
-  build-depends:       base >=4.14 && <4.15,
+  build-depends:       base ^>=4.16,
     text,
+    aeson,
     scotty,
     persistent,
     persistent-sqlite,
-    deriving-aeson,
     time,
     transformers,
     monad-logger,
     stm,
     base64-bytestring,
     cryptohash-sha256,
-  -- hs-source-dirs:
-  default-language:    Haskell2010
+    panfiguration,
+    barbies-th,
+  hs-source-dirs: src
+  default-language: GHC2021
+  ghc-options: -Wall -Wcompat
