--- a/bbs.cabal
+++ b/bbs.cabal
@@ -19,6 +19,8 @@ extra-source-files:  CHANGELOG.md
 executable bbs
   main-is: Main.hs
   other-modules:
+    Config
+    Auth
     Model
     Util
     Types
@@ -37,6 +39,11 @@ executable bbs
     cryptohash-sha256,
     panfiguration,
     barbies-th,
+    http-types,
+    containers,
+    wai,
+    cryptonite,
+    bytestring,
   hs-source-dirs: src
   default-language: GHC2021
   ghc-options: -Wall -Wcompat
