--- a/cabal.project
+++ b/cabal.project
@@ -1,10 +1,16 @@
+with-compiler: ghc-9.2.2
 packages:
     .
 
 source-repository-package
     type: git
     location: https://github.com/herp-inc/panfiguration
-    tag: f06fd77a495c204fb5250e724c768f385887efb9
+    tag: master
+
+source-repository-package
+    type: git
+    location: https://github.com/fumieval/wai-middleware-comet
+    tag: master
 
 source-repository-package
     type: git
@@ -15,3 +21,9 @@ source-repository-package
     type: git
     location: https://github.com/fumieval/OrderOrder
     tag: f4bd7b9c059cf8a3430ce349563b48d52072e5d3
+
+extra-include-dirs:
+    /opt/homebrew/opt/zlib/include
+
+extra-lib-dirs:
+    /opt/homebrew/opt/zlib/lib
